<resources>
    <string name="app_name">CatVision.io</string>
    <string name="app_label">CatVision.io</string>
    <string name="title_activity_main">CatVision.io App</string>
    <string name="title_activity_test_area">Test Area</string>
    <string name="no_client_tag">-</string>
    <string name="no_status">-?-</string>
    <string name="share_screen_easily">Experience the beauty of screen sharing!</string>
    <string name="start_connecting">Pair me</string>
    <string name="start_sharing">Share me</string>
    <string name="stop_sharing">Stop sharing</string>
    <string name="title_activity_started">Started</string>
    <string name="title_activity_info">Info</string>

    <!-- Menu -->
    <string name="menu_show_tag">Info</string>
    <string name="menu_test_area">Let\'s play a game</string>
    <string name="menu_reset">Unpair device</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About CatVision.io</string>

    <!-- General -->
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!-- Intro page -->
    <string name="app_intro">Intro</string>
    <string name="intro_title_first">CatVision.io</string>
    <string name="intro_title_other">Pairing tutorial</string>
    <string name="intro_first_title">Welcome to CatVision.io App</string>
    <string name="intro_first_text">Experience screen sharing &amp; remote access provided by CatVision.io SDK for Android</string>
    <string name="intro_second_title">To start, pair this device with Web-App</string>
    <string name="intro_second_text">And gain access to this device from your computer</string>
    <string name="intro_third_title">Pairing option #1</string>
    <string name="intro_third_text">Scan QR code from Web-App at app.catvision.io to pair this device easily</string>
    <string name="intro_fourth_title">Pairing option #2</string>
    <string name="intro_fourth_text">Tap a button in this app to pair through your device\'s browser</string>
    <string name="intro_fifth_title">Get started!</string>
    <string name="intro_fifth_text">Tap on PAIR ME button &amp; enjoy the beauty of screen sharing!</string>

    <!-- Unpairing device -->
    <string name="dlg_unpair_title">Unpair device</string>
    <string name="dlg_unpair_text">Do you really want to unpair your device?</string>

    <!-- Started sharing -->
    <string name="started_sharing_text">Screen sharing is active</string>

    <!-- QR scan related -->
    <string name="title_activity_api_key_obtainer">Pair me!</string>
    <string name="api_obtain_top_text">Scan QR Code from app.catvision.io to pair this device with Web-App</string>
    <string name="api_obtain_middle_text">or pair this device with Web-App from your device\'s browser</string>
    <string name="title_activity_qrcode_scanner">QR code scanner</string>
    <string name="qr_scan">Scan QR code</string>
    <string name="qr_dialog_message">Pairing successful! Continue by tapping the \"SHARE ME\" button.</string>
    <string name="text_override">Input API Key ID</string>

    <!-- Deep-link related -->
    <string name="dl_open">via browser</string>
    <string name="dl_dialog_message">Pairing successful! Continue by tapping the \"SHARE ME\" button.</string>

    <!-- Manual obtaining -->
    <string name="manual_new_api_key">"Enter new API key ID"</string>

    <!-- About info -->
    <string name="title_activity_about">About</string>

    <!-- Help page -->
    <string name="title_activity_help">Help</string>

    <!-- TicTacToe -->
    <string name="tic_tac_toe_label">Play a game!</string>
    <string name="player2_win">Player 2 wins!</string>
    <string name="player1_win">Player 1 wins!</string>
    <string name="tie">This is a tie! No one wins!</string>
    <string name="player2_turn">Player 2\'s turn</string>
    <string name="player1_turn">Player 1\'s turn</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>
