<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:onClick="onMenuItemClickShowClientTag"
        android:title="@string/menu_show_tag" />

    <item
        android:onClick="onMenuItemClickTestArea"
        android:title="@string/menu_test_area"/>

    <item
        android:onClick="onMenuItemClickResetIdentity"
        android:title="@string/menu_reset"/>

    <item
        android:onClick="onMenuItemClickHelp"
        android:title="@string/menu_help"/>

    <item
        android:onClick="onMenuItemClickAbout"
        android:title="@string/menu_about"/>

</menu>