<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_test_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.catvision.app.ApiKeyObtainerActivity">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:padding="20dp"
            android:id="@+id/buttonQRCode"
            android:onClick="onClickQRCodeScan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/qr_scan"
            android:textColor="@android:color/white" />

        <Button
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:padding="20dp"
            android:id="@+id/buttonDeepLink"
            android:layout_below="@id/buttonQRCode"
            android:onClick="onClickGetDeepLink"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/dl_open"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>